k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acme2dfn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "acme2file"
  template:
    metadata:
      labels:
        app: "acme2file"
    spec:
      containers:
        - name: acme2file
          image: farberg/acme2file
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - name: csr-volume
              mountPath: /data/csrs/

        - name: file2dfn
          image: farberg/file2dfn
          args:
            [
              "-addName",
              "Testuser",
              "-addEMail",
              "test@example.com",
              "-addOrgUnit",
              "TestOrgUnit",
              "-client",
              "dfn",
              "-dryrunCsrFile",
              "/data/conf/csr-base64.txt",
              "-dryrunCertFile",
              "/data/conf/example-cert.pem",
            ]
          volumeMounts:
            - name: config-volume
              mountPath: /data/conf/
            - name: csr-volume
              mountPath: /data/csrs/
      volumes:
        - name: config-volume
          configMap:
            name: acme2file-configmap
        - name: csr-volume
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: acme2file-service
spec:
  selector:
    app: "acme2file"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: www
    - protocol: TCP
      port: 443
      targetPort: 443
      name: ssl

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acme2file-deployment-ingress
  #  namespace: "cert-manager"
  annotations:
    external-dns.alpha.kubernetes.io/hostname: acme.edsc.farberg.de
    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: acme.edsc.farberg.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: acme2file-service
                port:
                  number: 80
